[package]
name = "aoc_2019"
version = "0.1.0"
authors = ["kalleakerblom <kalleakerblom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2.4"
itertools = "0.8.2"
num = "0.2.0"
cgmath = "0.17.0"